fix scrollbar, description, ol zoom

--- a/app/assets/stylesheets/public_map/public_map.css.scss
+++ b/app/assets/stylesheets/public_map/public_map.css.scss
@@ -122,8 +122,9 @@
 .PublicMap-mapsList {
   padding-top: 10px;
 }
-
-
+.ol-viewport {
+      position: absolute !important
+}
 @media (min-width: $sMedia-desktop +1) {
   .PublicMap-metaList.PublicMap-metaList--mobile {
     display: inline-block !important;
